# bill-james-starting-pitcher-rankings

./: .gitignore  main.py  models.py  pyproject.toml  scrape.py  script.py
retrosheet/: 01_download_and_unzip.sh  02_build_box_scores.py  03_register_extraction.py  04_venue_extraction.py  05_parse.py  06_one_hundred.py  07_ratings.py  README.md  venues.csv
